2007-04-24 Eric Saunders <saunders@astro.ex.ac.uk>

	* *: Merged changes from the ADP variable star branch
	  'saunders_vs_agent_branch2' back into trunk.

2007-04-24 Alasdair Allan <aa@astro.ex.ac.uk>

	* widgets/eSTAR Status.wdgt/*: Fixed bug on UKIRT status, updated 
	  for new node agents and Eric's new ADP agent.
	
        * bin/test_servers.pl: Changed over to new node agents

        * www/estar/cgi-bin/status.pl: Changed over to new node agents

        * www/estar/cgi-bin/mobile.pl: Changed over to new node agents
     
	* demo/votech_garching07/: Added PLASTIC forwarded scripts
	
	* demo/ag_edinburgh06: Added Workbench RPC scripts
	        
2007-04-23 Alasdair Allan <aa@astro.ex.ac.uk>

        * www/robonet-1.0/cgi-bin/*: Added support for different filters
          from the override page.

2007-04-23 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/virtual_telescope.pl: Fixed several race conditions, and did
	extensive final testing. Now reasonably confident the code is correct.

2007-04-20 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/virtual_telescope.pl: Minor modifications to allow a
	multi-telescope network simulation to function. Added coords
	for FTN and FTS; which telescope is determined by parsing the
	process name. Changed telescope scoring to return 0 unless target
	is observable at the indicated start time.

2007-04-18 Eric Saunders <saunders@astro.ex.ac.uk>

	* bin/adaptive_vs_scheduler.pl, UA/Algorithm/VariableMonitor.pm,
	UA/Handler.pm: Generalised calls to algorithms. Now any message
	type will trigger the algorithm block for that observation type. It is
	up to the block to correctly handle each message type. Added code to
	hopefully allow us to catch the situation where an update is
	sent (with the timestamp), but no observation message ever arrives.

	* bin/adaptive_vs_scheduler.pl: Added traps to handle the error
	situation where the score succeeds, but the request fails.